...
    final state = context.watch<RegisterCubit>().state;

    return Row(
      crossAxisAlignment: CrossAxisAlignment.start,
      children: [
        Semantics(
          label: 'Acepto los términos',
          child: Checkbox(
            value: state.acceptedTerms,
            onChanged: (value) {
              cubit.updateAcceptedTerms(value ?? false);
            },
            activeColor: AppColors.primary,
...
