...
        debugPrint('>>> Showing snackbar from initState callback');
        _hasShownSnackbar = true;
        SnackbarService().show(
          duration: const Duration(seconds: 10),
          style: SnackbarStyle.withAction,
          message: 'Si inicias sesión, puedes obtener más módulos',
          actionLabel: 'Iniciar sesión',
          onAction: () async {
            final result = await context.push(LoginPage.routeName);
            if (result == true) {
              context.read<HomeBloc>().add(LoadHomeData());
            }
          },
...
